# C-learning

./: .gitignore  .gitmodules  README.md  list.dot
Hello World [Начало]/: hello_world.c  test  types_data.c
docs/: 1_hello_world.pptx  3.5_functions_p1.pptx  Практическое задание 1.docx  Практическое задание 10.docx  Практическое задание 11 (knapsack)_star.docx  Практическое задание 11. Отладчик.docx  Практическое задание 2.7.docx  Практическое задание 2.8.docx  Практическое задание 2.docx  Практическое задание 3.docx  Практическое задание 4.docx  Практическое задание 6.docx  Практическое задание 7.docx  Практическое задание 8.docx  Практическое задание 8_star.docx  Практическое задание 9.docx  Практическое задание t_star.docx  Практическое занятие 5.docx
games/snack/: CMakeLists.txt  game.c  header.h  main.c  start.sh
games/snack/utils/: control.c  game_field_generator.c  keypress_check.c  opirations_with_matrix.c  print.c  random.c
git_lab/: file1.txt  git_lab.docx  sort.c  submodule_test.py
knapsack/: input_1.txt  star_task.c
lab_9_os/: main.c
tinkoff_star_task/: start.sh  start_task_1.c
Лабораторная_1/: hello_world.c  output_variables.c  task_4.c
Лекция_07.10.2024/: funcs.c
Лекция_07.10.24/: funcs.c
Лекция_14.10.24/: calc.c
Лекция_16.09.24/: main.c  scan.c
Лекция_23.09.24/: brackets.c  break.c  continue.c  do_while.c  figure.c  for_loop.c  meow.c  semicolons.c  test.c  test.c.save  while.c  while_negative.c
Практическое_задание_1/: output_variables.c  task_0.c  task_1.c  task_2.c  task_3.c  task_4.c
Практическое_задание_10/: CMakeLists.txt  MF  MakeFile  main_task_4_for_5.c  start_cmake.sh  start_make.sh  time_functions.h
Практическое_задание_10/functions/: math_for_time.c  rand_time_generate.c
Практическое_задание_11/: task_1.c  task_2.c  task_3.c  task_4.c
Практическое_задание_12/task0/: Makefile  start_make.sh
Практическое_задание_12/task1/: CMakeLists.txt
Практическое_задание_12/task2/: url.txt
Практическое_задание_2/: task_1.c  task_2.c  task_3.c
Практическое_задание_2.1/: CMakeLists.txt  funcs.c  header.h  main.c  start_cmake.sh  student_funcs.c
Практическое_задание_2.1/sorts/: bogosort_wiki.c  counting_sort.c  insertion_sort.c  quick_sort.c
Практическое_задание_2.2/: CMakeLists.txt  list.dot  main.c
Практическое_задание_2.2/utils/: complex_construction.c  complex_construction.h  doubly_linked_int_list.c  doubly_linked_int_list.h  singly_linked_int_list.c  singly_linked_int_list.h
Практическое_задание_2.4/: my_test.txt  star_task.c  task_5_var4.c  test.txt
Практическое_задание_2.5/: CMakeLists.txt  main.c
Практическое_задание_2.5/star_task/: mib.c
Практическое_задание_2.5/utils/: console_utils.c  console_utils.h  spravka_struct.c  spravka_struct.h
Практическое_задание_2.6/: CMakeLists.txt  clear_all.sh  main.c  main_dlfcn.c  task_3.sh  task_4.sh  task_5.sh  task_star.sh
Практическое_задание_2.6/utils/: complex_construction.c  complex_construction.h  console_utils.c  console_utils.h  doubly_linked_int_list.c  singly_linked_int_list.c  singly_linked_int_list.h
Практическое_задание_2.7/: din_phil.c  laba7.md  matrix_multiplication.c  simple_chat.c  sleepsort.c  task_3.c  task_4.c  tmp.py
Практическое_задание_2.8/: start_tests.sh  triangle.h
Практическое_задание_2.8/star/: CMakeLists.txt  test.sh
Практическое_задание_2.8/star/tests/: CMakeLists.txt  test_algorithm.c
Практическое_задание_2.8/tests/: CMakeLists.txt  test_functions.c
Практическое_задание_3/: task_4.c  task_5.c  task_6.c  task_7.c  task_8.c
Практическое_задание_4/: task_4.c
Практическое_задание_5/: task_4.c  task_5.c
Практическое_задание_6/: task_for_4.c  task_for_5_4.c
Практическое_задание_7/: task_3.c
Практическое_задание_8/: additional_task.c  task_for_5.c
Практическое_задание_9/: additional_task_4.c  task_4_for_5.c
РГР/: CMakeLists.txt  build.sh  main.c  requirements.sh  start_tests.sh  translate.h
РГР/tests/: test_hash_table.c  test_translation.c
РГР/utils/: args_processing.c  args_processing.h  file_processing.c  file_processing.h  hash_table.c  hash_table.h  internet_search.c  internet_search.h  translation.c  translation.h
(+2 files in other folders)
